--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "private": true,
-  "displayName": "Plugin Name",
-  "name": "homebridge-plugin-name",
-  "version": "1.0.0",
-  "description": "A short description about what your plugin does.",
+  "displayName": "Homebridge Raspberry Pi (rpi) WS281x",
+  "name": "homebridge-rpi-ws281x",
+  "version": "0.1.0",
+  "description": "Use WS281x device with rapserry pi",
   "license": "Apache-2.0",
   "repository": {
     "type": "git",
-    "url": "git://github.com/USERNAME/GITHUB_PROJECT_NAME.git"
+    "url": "git://github.com/lyndonbuckley/homebridge-rpi-ws281x.git"
   },
   "bugs": {
-    "url": "https://github.com/USERNAME/GITHUB_PROJECT_NAME/issues"
+    "url": "https://github.com/lyndonbuckley/homebridge-rpi-ws281x/issues"
   },
   "engines": {
     "node": ">=10.17.0",
@@ -24,9 +24,14 @@
     "prepublishOnly": "npm run lint && npm run build"
   },
   "keywords": [
-    "homebridge-plugin"
+    "homebridge-plugin",
+    "rpi",
+    "ws281x"
   ],
-  "dependencies": {},
+  "dependencies": {
+    "color-convert": "^1.9.3",
+    "rpi-ws281x": "^1.0.36"
+  },
   "devDependencies": {
     "@types/node": "^14.14.31",
     "@typescript-eslint/eslint-plugin": "^4.16.1",
